Introduce Hazelcast to replace Ignite