@@ -32,8 +32,6 @@
     <micrometer.version>1.12.9</micrometer.version>
     <hivemq.client.version>1.3.3</hivemq.client.version>
 
-    <ignite.version>2.16.0</ignite.version>
-
     <launcher.class>cloud.wangyongjun.vxmq.VxmqLauncher</launcher.class>
   </properties>
 
@@ -111,15 +109,10 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Ignite -->
+    <!-- Hazelcast -->
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-ignite</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.ignite</groupId>
-      <artifactId>ignite-slf4j</artifactId>
-      <version>${ignite.version}</version>
+      <artifactId>vertx-hazelcast</artifactId>
     </dependency>
 
     <!-- Mqtt -->
@@ -267,7 +260,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
-          <argLine>-Xlog:gc -Xms2048m -Xmx4096m --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argLine>
+          <argLine>--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -306,33 +299,6 @@
             <workingDirectory>/vxmq</workingDirectory>
             <mainClass>${launcher.class}</mainClass>
             <appRoot>/vxmq/app</appRoot>
-            <!-- From https://ignite.apache.org/docs/latest/quick-start/java#running-ignite-with-java-11-or-later -->
-            <jvmFlags>
-              <jvmFlag>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.io=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.math=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.sql/java.sql=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.time=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.base/java.text=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.management/sun.management=ALL-UNNAMED</jvmFlag>
-              <jvmFlag>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</jvmFlag>
-            </jvmFlags>
             <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
             <ports>
               <port>8060/tcp</port>
@@ -341,11 +307,42 @@
               <port>47500/tcp</port>
             </ports>
             <environment>
-              <IGNITE_HOME>/vxmq/ignite</IGNITE_HOME>
               <VXMQ_LOGS_DIR>/vxmq/logs</VXMQ_LOGS_DIR>
             </environment>
           </container>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.xolstice.maven.plugins</groupId>
+        <artifactId>protobuf-maven-plugin</artifactId>
+        <version>0.6.1</version>
+        <configuration>
+          <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
+          <pluginId>grpc-java</pluginId>
+          <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+          <protocPlugins>
+            <protocPlugin>
+              <id>vertx-grpc-protoc-plugin2</id>
+              <groupId>io.vertx</groupId>
+              <artifactId>vertx-grpc-protoc-plugin2</artifactId>
+              <version>${stack.version}</version>
+              <mainClass>io.vertx.grpc.plugin.VertxGrpcGenerator</mainClass>
+            </protocPlugin>
+          </protocPlugins>
+        </configuration>
+        <executions>
+          <execution>
+            <id>compile</id>
+            <configuration>
+              <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+              <clearOutputDirectory>false</clearOutputDirectory>
+            </configuration>
+            <goals>
+              <goal>compile</goal>
+              <goal>compile-custom</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
